--- a/JuliaProgramming-CapeTown/Assignments/Week3_PR_submission.ipynb
+++ b/JuliaProgramming-CapeTown/Assignments/Week3_PR_submission.ipynb
@@ -4,31 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Change to my Week 3 Assignment Title"
+    "# Week 3 - Fitting a curve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Plots.PyPlotBackend()"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# You may need this setup\n",
     "using Plots\n",
-    "pyplot()"
+    "#pyplot()"
    ]
   },
   {
@@ -40,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -66,7 +55,7 @@
        " 5.56867   -10.9172  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,9 +75,20 @@
     "              5.023289852  -8.36416901;\n",
     "              5.04233698   -7.924477517;\n",
     "              5.50739285  -10.77482371;\n",
-    "              5.568665171 -10.9171878]\n",
-    "\n",
-    "# Create the arrays x and y, assigning x the first column of data_tofit and y the second column\n"
+    "              5.568665171 -10.9171878]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Create the arrays x and y, assigning x the first column of data_tofit and y the second column\n",
+    "x = data_tofit[:,1];\n",
+    "y = data_tofit[:,2];"
    ]
   },
   {
@@ -100,13 +100,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Plots.jl] Initializing backend: pyplot\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Couldn't initialize pyplot.  (might need to install it?)\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: ArgumentError: PyPlot not found in path\nwhile loading In[26], in expression starting on line 2",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: ArgumentError: PyPlot not found in path\nwhile loading In[26], in expression starting on line 2",
+      ""
+     ]
+    }
+   ],
    "source": [
-    "# Plot the x and y data points using a scatter plot of the x and y array variables\n"
+    "# Plot the x and y data points using a scatter plot of the x and y array variables\n",
+    "plot(x,y)"
    ]
   },
   {
@@ -118,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +172,7 @@
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -189,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.6",
+   "display_name": "Julia 0.4.1",
    "language": "julia",
    "name": "julia-0.4"
   },
@@ -197,7 +222,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.6"
+   "version": "0.4.1"
   }
  },
  "nbformat": 4,
