--- a/JuliaProgramming-CapeTown/Assignments/Week3_PR_submission.ipynb
+++ b/JuliaProgramming-CapeTown/Assignments/Week3_PR_submission.ipynb
@@ -9,15 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: UndefVarError: pyplots not defined\nwhile loading In[1], in expression starting on line 3",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: UndefVarError: pyplots not defined\nwhile loading In[1], in expression starting on line 3",
+      ""
+     ]
+    }
+   ],
    "source": [
     "# You may need this setup\n",
     "using Plots\n",
-    "#pyplot()"
+    "pyplots()"
    ]
   },
   {
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +65,7 @@
        " 5.56867   -10.9172  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -100,38 +110,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Plots.jl] Initializing backend: pyplot\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Couldn't initialize pyplot.  (might need to install it?)\n"
-     ]
-    },
-    {
-     "ename": "LoadError",
-     "evalue": "LoadError: ArgumentError: PyPlot not found in path\nwhile loading In[26], in expression starting on line 2",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: ArgumentError: PyPlot not found in path\nwhile loading In[26], in expression starting on line 2",
-      ""
-     ]
+     "data": {
+      "text/html": [
+       "<script src=\"/Users/tarek_allam/.julia/v0.4/Plots/deps/plotly-latest.min.js\"></script>    <div id=\"39394447-935f-46d0-8bff-53f1959c14a6\" style=\"width:600px;height:400px;\"></div>\n",
+       "    <script>\n",
+       "    PLOT = document.getElementById('39394447-935f-46d0-8bff-53f1959c14a6');\n",
+       "    Plotly.plot(PLOT, [{\"yaxis\":\"y\",\"y\":[-1.641695388,-0.977697538,0.52771122,1.711524991,1.891000015,-0.463427794,-0.443566619,-1.275179133,-0.690499597,-5.516130799,-6.001703074,-8.36416901,-7.924477517,-10.77482371,-10.9171878],\"showlegend\":true,\"name\":\"y1\",\"type\":\"scatter\",\"xaxis\":\"x\",\"x\":[1.6800483,0.501309281,1.528012113,1.70012253,1.992493625,2.706075824,2.994931927,3.491852811,3.501191722,4.459924502,4.936965851,5.023289852,5.04233698,5.50739285,5.568665171],\"mode\":\"markers\",\"marker\":{\"symbol\":\"circle\",\"line\":{\"width\":1,\"color\":\"rgba(0, 0, 0, 1.000)\"},\"size\":12,\"color\":\"rgba(0, 154, 250, 1.000)\"}}], {\"yaxis\":{\"type\":\"-\",\"titlefont\":{\"size\":15,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"title\":\"\",\"tickfont\":{\"size\":11,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"tickmode\":\"array\",\"showgrid\":true,\"tickvals\":[-10.0,-5.0,0.0],\"domain\":[0.057305336832895896,0.9901574803149605],\"ticktext\":[\"-10\",\"-5\",\"0\"],\"zeroline\":false,\"linecolor\":\"rgba(0, 0, 0, 1.000)\",\"tickcolor\":\"rgba(0, 0, 0, 1.000)\",\"anchor\":\"x\"},\"annotations\":[],\"width\":600,\"plot_bgcolor\":\"rgba(255, 255, 255, 1.000)\",\"showlegend\":true,\"legend\":{\"bgcolor\":\"rgba(255, 255, 255, 1.000)\",\"font\":{\"size\":11,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"bordercolor\":\"rgba(0, 0, 0, 1.000)\"},\"xaxis\":{\"type\":\"-\",\"titlefont\":{\"size\":15,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"title\":\"\",\"tickfont\":{\"size\":11,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"tickmode\":\"array\",\"showgrid\":true,\"tickvals\":[1.0,2.0,3.0,4.0,5.0],\"domain\":[0.05905511811023622,0.9934383202099738],\"ticktext\":[\"1\",\"2\",\"3\",\"4\",\"5\"],\"zeroline\":false,\"linecolor\":\"rgba(0, 0, 0, 1.000)\",\"tickcolor\":\"rgba(0, 0, 0, 1.000)\",\"anchor\":\"y\"},\"paper_bgcolor\":\"rgba(255, 255, 255, 1.000)\",\"height\":400,\"margin\":{\"r\":0,\"l\":0,\"b\":0,\"t\":20}});\n",
+       "    </script>\n"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Plot the x and y data points using a scatter plot of the x and y array variables\n",
-    "plot(x,y)"
+    "scatter(x,y)"
    ]
   },
   {
@@ -143,13 +144,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "parafit (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create a function called parabfit, with x as the argument, returning a*x^2 + b*x + c\n"
+    "# Create a function called parabfit, with x as the argument, returning a*x^2 + b*x + c\n",
+    "function parafit(x)\n",
+    "    \n",
+    "    return a*x^2 + b*x + c\n",
+    "    \n",
+    "end"
    ]
   },
   {
@@ -161,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -169,10 +186,37 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "1x5 Array{Int64,2}:\n",
+       " 1  2  3  4  5"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h = [1:5]'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script src=\"/Users/tarek_allam/.julia/v0.4/Plots/deps/plotly-latest.min.js\"></script>    <div id=\"52b2bdb7-a434-48c8-ac4d-26f3743a1b9f\" style=\"width:600px;height:400px;\"></div>\n",
+       "    <script>\n",
+       "    PLOT = document.getElementById('52b2bdb7-a434-48c8-ac4d-26f3743a1b9f');\n",
+       "    Plotly.plot(PLOT, [{\"yaxis\":\"y\",\"y\":[21.0,20.10111213141516,19.22263034384246,18.364554637281913,17.526885011733498,16.709621467197223,15.91276400367309,15.136312621161107,14.38026731966126,13.644628099173556,12.92939495969799,12.234567901234566,11.56014692378329,10.906132027344148,10.272523211917152,9.659320477502296,9.06652382409958,8.494133251709009,7.9421487603305785,7.4105703499642885,6.899398020610141,6.408631772268137,5.938271604938271,5.4883175186205495,5.058769513314967,4.649627589021529,4.26089174574023,3.8925619834710754,3.5446383022140595,3.217120701969186,2.9100091827364554,2.623303744515866,2.3570043873074176,2.1111111111111116,1.8856239159269466,1.680542801754923,1.4958677685950412,1.3315988164473012,1.187735945311703,1.064279155188246,0.9612284460769309,0.8785838179777573,0.8163452708907254,0.7745128048158352,0.7530864197530864,0.7520661157024793,0.7714518926640139,0.81124375063769,0.8714416896235078,0.9520457096214672,1.0530558106315682,1.1744719926538107,1.3162942556881951,1.4785225997347209,1.6611570247933884,1.8641975308641976,2.087644117947148,2.3314967860422406,2.5957555351494745,2.88042036526885,3.1854912764003673,3.510968268544026,3.8568513416998265,4.223140495867768,4.609835731047853,5.016937047240078,5.444444444444445,5.892357922660953,6.360677481889604,6.849403122130395,7.358534843383326,7.888072645648403,8.43801652892562,9.008366493214979,9.599122538516479,10.21028466483012,10.841852872155904,11.493827160493826,12.166207529843895,12.8589939802061,13.572186511580451,14.305785123966942,15.059789817365576,15.834200591776348,16.629017447199267,17.444240383634323,18.27986940108152,19.135904499540864,20.012345679012345,20.90919293949597,21.826446280991735,22.764105703499645,23.722171207019695,24.70064279155188,25.699520457096213,26.718804203652688,27.758494031221304,28.81858993980206,29.89909192939496,31.0],\"showlegend\":true,\"name\":\"y1\",\"type\":\"scatter\",\"xaxis\":\"x\",\"line\":{\"width\":1,\"dash\":\"solid\",\"color\":\"rgba(0, 154, 250, 1.000)\",\"shape\":\"linear\"},\"x\":[-5.0,-4.898989898989899,-4.797979797979798,-4.696969696969697,-4.595959595959596,-4.494949494949495,-4.393939393939394,-4.292929292929293,-4.191919191919192,-4.090909090909091,-3.98989898989899,-3.888888888888889,-3.787878787878788,-3.686868686868687,-3.585858585858586,-3.484848484848485,-3.3838383838383836,-3.282828282828283,-3.1818181818181817,-3.080808080808081,-2.9797979797979797,-2.878787878787879,-2.7777777777777777,-2.676767676767677,-2.5757575757575757,-2.474747474747475,-2.3737373737373737,-2.272727272727273,-2.1717171717171717,-2.0707070707070705,-1.9696969696969697,-1.8686868686868687,-1.7676767676767677,-1.6666666666666667,-1.5656565656565657,-1.4646464646464648,-1.3636363636363635,-1.2626262626262625,-1.1616161616161615,-1.0606060606060606,-0.9595959595959596,-0.8585858585858586,-0.7575757575757576,-0.6565656565656566,-0.5555555555555556,-0.45454545454545453,-0.35353535353535354,-0.25252525252525254,-0.15151515151515152,-0.050505050505050504,0.050505050505050504,0.15151515151515152,0.25252525252525254,0.35353535353535354,0.45454545454545453,0.5555555555555556,0.6565656565656566,0.7575757575757576,0.8585858585858586,0.9595959595959596,1.0606060606060606,1.1616161616161615,1.2626262626262625,1.3636363636363635,1.4646464646464648,1.5656565656565657,1.6666666666666667,1.7676767676767677,1.8686868686868687,1.9696969696969697,2.0707070707070705,2.1717171717171717,2.272727272727273,2.3737373737373737,2.474747474747475,2.5757575757575757,2.676767676767677,2.7777777777777777,2.878787878787879,2.9797979797979797,3.080808080808081,3.1818181818181817,3.282828282828283,3.3838383838383836,3.484848484848485,3.585858585858586,3.686868686868687,3.787878787878788,3.888888888888889,3.98989898989899,4.090909090909091,4.191919191919192,4.292929292929293,4.393939393939394,4.494949494949495,4.595959595959596,4.696969696969697,4.797979797979798,4.898989898989899,5.0],\"mode\":\"lines\"}], {\"yaxis\":{\"type\":\"-\",\"titlefont\":{\"size\":15,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"title\":\"\",\"tickfont\":{\"size\":11,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"tickmode\":\"array\",\"showgrid\":true,\"tickvals\":[10.0,20.0,30.0],\"domain\":[0.057305336832895896,0.9901574803149605],\"ticktext\":[\"10\",\"20\",\"30\"],\"zeroline\":false,\"linecolor\":\"rgba(0, 0, 0, 1.000)\",\"tickcolor\":\"rgba(0, 0, 0, 1.000)\",\"anchor\":\"x\"},\"annotations\":[],\"width\":600,\"plot_bgcolor\":\"rgba(255, 255, 255, 1.000)\",\"showlegend\":true,\"legend\":{\"bgcolor\":\"rgba(255, 255, 255, 1.000)\",\"font\":{\"size\":11,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"bordercolor\":\"rgba(0, 0, 0, 1.000)\"},\"xaxis\":{\"type\":\"-\",\"titlefont\":{\"size\":15,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"title\":\"\",\"tickfont\":{\"size\":11,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"tickmode\":\"array\",\"showgrid\":true,\"tickvals\":[-5.0,-2.5,0.0,2.5,5.0],\"domain\":[0.05905511811023622,0.9934383202099738],\"ticktext\":[\"-5.0\",\"-2.5\",\"0.0\",\"2.5\",\"5.0\"],\"zeroline\":false,\"linecolor\":\"rgba(0, 0, 0, 1.000)\",\"tickcolor\":\"rgba(0, 0, 0, 1.000)\",\"anchor\":\"y\"},\"paper_bgcolor\":\"rgba(255, 255, 255, 1.000)\",\"height\":400,\"margin\":{\"r\":0,\"l\":0,\"b\":0,\"t\":20}});\n",
+       "    </script>\n"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +227,8 @@
     "b = 1\n",
     "c = 1\n",
     "\n",
-    "# Plot the function parabfit, for x values between -5 and 5 \n"
+    "# Plot the function parabfit, for x values between -5 and 5 \n",
+    "plot(parafit, -5,5)"
    ]
   },
   {
@@ -201,14 +246,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script src=\"/Users/tarek_allam/.julia/v0.4/Plots/deps/plotly-latest.min.js\"></script>    <div id=\"73a1cc9e-6f5c-483d-a1b9-8b3da7a5a577\" style=\"width:600px;height:400px;\"></div>\n",
+       "    <script>\n",
+       "    PLOT = document.getElementById('73a1cc9e-6f5c-483d-a1b9-8b3da7a5a577');\n",
+       "    Plotly.plot(PLOT, [{\"yaxis\":\"y\",\"y\":[-38.0,-36.817263544536274,-35.652892561983464,-34.5068870523416,-33.37924701561065,-32.269972451790636,-31.179063360881536,-30.106519742883382,-29.052341597796143,-28.016528925619834,-26.999081726354454,-26.0,-25.019283746556475,-24.056932966023872,-23.112947658402206,-22.18732782369146,-21.28007346189164,-20.391184573002754,-19.52066115702479,-18.66850321395776,-17.83471074380165,-17.019283746556475,-16.22222222222222,-15.443526170798899,-14.6831955922865,-13.941230486685033,-13.21763085399449,-12.512396694214878,-11.82552800734619,-11.157024793388427,-10.506887052341597,-9.875114784205692,-9.261707988980715,-8.666666666666668,-8.089990817263544,-7.53168044077135,-6.991735537190082,-6.470156106519743,-5.96694214876033,-5.482093663911845,-5.0156106519742885,-4.567493112947658,-4.137741046831955,-3.726354453627181,-3.3333333333333335,-2.958677685950413,-2.6023875114784207,-2.2644628099173554,-1.9449035812672175,-1.6437098255280074,-1.3608815426997245,-1.0964187327823691,-0.8503213957759412,-0.6225895316804408,-0.4132231404958677,-0.22222222222222232,-0.04958677685950441,0.10468319559228645,0.24058769513314981,0.3581267217630848,0.4573002754820934,0.5381083562901741,0.6005509641873275,0.6446280991735529,0.6703397612488522,0.6776859504132231,0.6666666666666665,0.637281910009182,0.5895316804407704,0.5234159779614322,0.4389348025711657,0.3360881542699721,0.21487603305785097,0.07529843893480237,-0.08264462809917461,-0.2589531680440782,-0.4536271808999093,-0.6666666666666679,-0.8980716253443539,-1.1478420569329657,-1.4159779614325068,-1.7024793388429753,-2.0073461891643714,-2.330578512396693,-2.672176308539946,-3.0321395775941244,-3.4104683195592305,-3.807162534435264,-4.222222222222223,-4.655647382920112,-5.107438016528928,-5.577594123048669,-6.06611570247934,-6.5730027548209335,-7.098255280073463,-7.641873278236915,-8.203856749311296,-8.784205693296602,-9.382920110192838,-10.0],\"showlegend\":true,\"name\":\"y1\",\"type\":\"scatter\",\"xaxis\":\"x\",\"line\":{\"width\":1,\"dash\":\"solid\",\"color\":\"rgba(0, 154, 250, 1.000)\",\"shape\":\"linear\"},\"x\":[-5.0,-4.898989898989899,-4.797979797979798,-4.696969696969697,-4.595959595959596,-4.494949494949495,-4.393939393939394,-4.292929292929293,-4.191919191919192,-4.090909090909091,-3.98989898989899,-3.888888888888889,-3.787878787878788,-3.686868686868687,-3.585858585858586,-3.484848484848485,-3.3838383838383836,-3.282828282828283,-3.1818181818181817,-3.080808080808081,-2.9797979797979797,-2.878787878787879,-2.7777777777777777,-2.676767676767677,-2.5757575757575757,-2.474747474747475,-2.3737373737373737,-2.272727272727273,-2.1717171717171717,-2.0707070707070705,-1.9696969696969697,-1.8686868686868687,-1.7676767676767677,-1.6666666666666667,-1.5656565656565657,-1.4646464646464648,-1.3636363636363635,-1.2626262626262625,-1.1616161616161615,-1.0606060606060606,-0.9595959595959596,-0.8585858585858586,-0.7575757575757576,-0.6565656565656566,-0.5555555555555556,-0.45454545454545453,-0.35353535353535354,-0.25252525252525254,-0.15151515151515152,-0.050505050505050504,0.050505050505050504,0.15151515151515152,0.25252525252525254,0.35353535353535354,0.45454545454545453,0.5555555555555556,0.6565656565656566,0.7575757575757576,0.8585858585858586,0.9595959595959596,1.0606060606060606,1.1616161616161615,1.2626262626262625,1.3636363636363635,1.4646464646464648,1.5656565656565657,1.6666666666666667,1.7676767676767677,1.8686868686868687,1.9696969696969697,2.0707070707070705,2.1717171717171717,2.272727272727273,2.3737373737373737,2.474747474747475,2.5757575757575757,2.676767676767677,2.7777777777777777,2.878787878787879,2.9797979797979797,3.080808080808081,3.1818181818181817,3.282828282828283,3.3838383838383836,3.484848484848485,3.585858585858586,3.686868686868687,3.787878787878788,3.888888888888889,3.98989898989899,4.090909090909091,4.191919191919192,4.292929292929293,4.393939393939394,4.494949494949495,4.595959595959596,4.696969696969697,4.797979797979798,4.898989898989899,5.0],\"mode\":\"lines\"},{\"yaxis\":\"y\",\"y\":[-1.641695388,-0.977697538,0.52771122,1.711524991,1.891000015,-0.463427794,-0.443566619,-1.275179133,-0.690499597,-5.516130799,-6.001703074,-8.36416901,-7.924477517,-10.77482371,-10.9171878],\"showlegend\":true,\"name\":\"y2\",\"type\":\"scatter\",\"xaxis\":\"x\",\"x\":[1.6800483,0.501309281,1.528012113,1.70012253,1.992493625,2.706075824,2.994931927,3.491852811,3.501191722,4.459924502,4.936965851,5.023289852,5.04233698,5.50739285,5.568665171],\"mode\":\"markers\",\"marker\":{\"symbol\":\"circle\",\"line\":{\"width\":1,\"color\":\"rgba(0, 0, 0, 1.000)\"},\"size\":12,\"color\":\"rgba(227, 111, 71, 1.000)\"}}], {\"yaxis\":{\"type\":\"-\",\"titlefont\":{\"size\":15,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"title\":\"\",\"tickfont\":{\"size\":11,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"tickmode\":\"array\",\"showgrid\":true,\"tickvals\":[-30.0,-20.0,-10.0,0.0],\"domain\":[0.057305336832895896,0.9901574803149605],\"ticktext\":[\"-30\",\"-20\",\"-10\",\"0\"],\"zeroline\":false,\"linecolor\":\"rgba(0, 0, 0, 1.000)\",\"tickcolor\":\"rgba(0, 0, 0, 1.000)\",\"anchor\":\"x\"},\"annotations\":[],\"width\":600,\"plot_bgcolor\":\"rgba(255, 255, 255, 1.000)\",\"showlegend\":true,\"legend\":{\"bgcolor\":\"rgba(255, 255, 255, 1.000)\",\"font\":{\"size\":11,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"bordercolor\":\"rgba(0, 0, 0, 1.000)\"},\"xaxis\":{\"type\":\"-\",\"titlefont\":{\"size\":15,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"title\":\"\",\"tickfont\":{\"size\":11,\"color\":\"rgba(0, 0, 0, 1.000)\",\"family\":\"Helvetica\"},\"tickmode\":\"array\",\"showgrid\":true,\"tickvals\":[-4.0,-2.0,0.0,2.0,4.0],\"domain\":[0.05905511811023622,0.9934383202099738],\"ticktext\":[\"-4\",\"-2\",\"0\",\"2\",\"4\"],\"zeroline\":false,\"linecolor\":\"rgba(0, 0, 0, 1.000)\",\"tickcolor\":\"rgba(0, 0, 0, 1.000)\",\"anchor\":\"y\"},\"paper_bgcolor\":\"rgba(255, 255, 255, 1.000)\",\"height\":400,\"margin\":{\"r\":0,\"l\":0,\"b\":0,\"t\":20}});\n",
+       "    </script>\n"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# More plot!() tries.\n",
-    "# a,b,c = \n"
+    "a,b,c = -0.9, 2.8, -1.5\n",
+    "plot(parafit, -5, 5)\n",
+    "scatter!(x, y)"
    ]
   }
  ],
