Adding the peer review assigments. Also beginning the honors submission

--- a/JuliaProgramming-CapeTown/Assignments/Week3_Honors1-Types-PR-submission.ipynb
+++ b/JuliaProgramming-CapeTown/Assignments/Week3_Honors1-Types-PR-submission.ipynb
@@ -32,11 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: syntax: incomplete: premature end of input\nwhile loading In[2], in expression starting on line 2",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: syntax: incomplete: premature end of input\nwhile loading In[2], in expression starting on line 2",
+      ""
+     ]
+    }
+   ],
    "source": [
     "# Subtypes of Real\n"
    ]
@@ -249,12 +259,134 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tuple{ASCIIString,Int64,ASCIIString,Int64,ASCIIString,Int64}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "typeof((\"A\", 3, \"B\", 4, \"C\", 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6-element Array{Int64,1}:\n",
+       " 1\n",
+       " 2\n",
+       " 1\n",
+       " 2\n",
+       " 1\n",
+       " 2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repmat([1, 2], 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       " 1\n",
+       " 2\n",
+       " 3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [[1, 2, 3] [4, 5, 6] ]\n",
+    "b = [1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: DimensionMismatch(\"matrix A has dimensions (3,2), vector B has length 3\")\nwhile loading In[6], in expression starting on line 1",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: DimensionMismatch(\"matrix A has dimensions (3,2), vector B has length 3\")\nwhile loading In[6], in expression starting on line 1",
+      "",
+      " in generic_matvecmul! at linalg/matmul.jl:367",
+      " in * at linalg/matmul.jl:86"
+     ]
+    }
+   ],
+   "source": [
+    "a * b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1x3 Array{Int64,2}:\n",
+       " 2  2  2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = [2 2 2]"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.4.6",
+   "display_name": "Julia 0.4.1",
    "language": "julia",
    "name": "julia-0.4"
   },
@@ -262,7 +394,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.6"
+   "version": "0.4.1"
   }
  },
  "nbformat": 4,
