Sigmoid function complete. Remeber the dot-slash for element wise operations

--- a/MachineLearning-Stanford/machine-learning-ex2/ex2/ex2-scratch.ipynb
+++ b/MachineLearning-Stanford/machine-learning-ex2/ex2/ex2-scratch.ipynb
@@ -508,6 +508,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mat =\n",
+      "\n",
+      "     1     2     3     4     5     6\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat = [1 2 3 4 5 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g =\n",
+      "\n",
+      "    0.7311         0         0         0         0         0\n",
+      "\n",
+      "\n",
+      "ans =\n",
+      "\n",
+      "    0.7311         0         0         0         0         0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sigmoid(mat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ans =\n",
+      "\n",
+      "    0.5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "1 / (1 + exp(-0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ans =\n",
+      "\n",
+      "    0.8147    0.9134    0.2785\n",
+      "    0.9058    0.6324    0.5469\n",
+      "    0.1270    0.0975    0.9575\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand(3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matt =\n",
+      "\n",
+      "    0.9649    0.9572    0.1419\n",
+      "    0.1576    0.4854    0.4218\n",
+      "    0.9706    0.8003    0.9157\n"
+     ]
+    }
+   ],
+   "source": [
+    "matt = rand(3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mMatrix dimensions must agree.\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "pp = zeros(size(matt)); \n",
+    "1 / (1 + exp(-matt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mFile /Users/tarek_allam/coursera/MachineLearning-Stanford/machine-learning-ex2/ex2/sigmoid.m, line 12, in sigmoid\n",
+      "Matrix dimensions must agree.\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "sigmoid(matt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
